<resources>
    <string name="app_name">About esports</string>
    <string name="title_news">News</string>
    <string name="title_plays">Plays</string>
    <string name="title_tournaments">Tournaments</string>
    <string name="title_personal_account">Personal account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up_error">Неудалось зарегестрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="sign_up_verification">Сообщение с потверждением регистрации отправлено на почту</string>
    <string name="sign_up_verification_error">Неудалось отправить cообщение с потверждением регистрации на почту</string>
    <string name="sign_up_need">Войдите или зарегестрируйтесь!</string>
    <string name="have_account">Уже есть аккаунт</string>
    <string name="review">Обзор</string>
    <string name="Grid">Сетка</string>
    <string name="Participants">Участники</string>
    <string name="Rules">Правила</string>
    <string name="future">будущие</string>
    <string name="current">текущие</string>
    <string name="past">прошедшее</string>
</resources>