<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.news.NewsFragment">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#9F111C1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeMaterialToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_drawer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/homeMaterialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/prime_black"
            android:contextClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/dota2"
            app:menu="@menu/main_toolbar"
            app:navigationIcon="@android:drawable/ic_dialog_dialer"
            app:title="Dota2"
            app:titleTextColor="@color/prime_red_black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current" />

        <Button
            android:id="@+id/future"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/future"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeMaterialToolbar" />

        <Button
            android:id="@+id/current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/current"
            app:layout_constraintEnd_toStartOf="@+id/past"
            app:layout_constraintStart_toEndOf="@+id/future"
            app:layout_constraintTop_toBottomOf="@+id/homeMaterialToolbar" />

        <Button
            android:id="@+id/past"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/past"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeMaterialToolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>